<resources>
    <string name="app_name">Sea Battle</string>
    <string name="letter_a" translatable="false">A</string>
    <string name="letter_b" translatable="false">B</string>
    <string name="letter_c" translatable="false">C</string>
    <string name="letter_d" translatable="false">D</string>
    <string name="letter_e" translatable="false">E</string>
    <string name="letter_f" translatable="false">F</string>
    <string name="letter_g" translatable="false">G</string>
    <string name="letter_h" translatable="false">H</string>
    <string name="letter_i" translatable="false">I</string>
    <string name="letter_j" translatable="false">J</string>
    <string name="number_1" translatable="false">1</string>
    <string name="number_2" translatable="false">2</string>
    <string name="number_3" translatable="false">3</string>
    <string name="number_4" translatable="false">4</string>
    <string name="number_5" translatable="false">5</string>
    <string name="number_6" translatable="false">6</string>
    <string name="number_7" translatable="false">7</string>
    <string name="number_8" translatable="false">8</string>
    <string name="number_9" translatable="false">9</string>
    <string name="number_10" translatable="false">10</string>
    <string name="generate_ships_text">Generate Ships</string>
    <string name="fire_text">Fire!</string>
    <string name="start_text">Start</string>
    <string name="new_game_text">New Game</string>
    <string name="status_welcome_text">Welcome!</string>
    <string name="status_generate_or_start_text">Generate ships again or start the game</string>
    <string name="status_select_to_fire_text">Select a cell to make a fire</string>
    <string name="status_game_over_you_win_text">Game over you win!</string>
    <string name="status_game_over_you_lose_text">Game over you lose</string>
    <string name="status_shot_ship_again_text">Select a cell and make a fire again</string>
    <string name="status_opponent_shot_text">The opponent is making a fire</string>
    <string name="status_opponent_shot_again_text">The opponent is making a fire again</string>
    <string name="menu_share_text">Share</string>
    <string name="menu_rate_on_play_market_text">Rate on Play Market</string>
    <string name="menu_write_to_author_text">Write to Author</string>
    <string name="menu_more_apps_text">More Apps</string>
    <string name="menu_privacy_policy_text">Privacy Policy</string>
    <string name="cannot_send_email_error_text">Cannot send email</string>
    <string name="share_body_text">I recommend you a Sea Battle game!</string>
    <string name="share_text">Share via</string>
    <string name="cannot_open_market_error_text">Unable to open Play Market app</string>
</resources>
