<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:title="@string/menu_share_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/rate"
        android:title="@string/menu_rate_on_play_market_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/more_apps"
        android:title="@string/menu_more_apps_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/write_to_author"
        android:title="@string/menu_write_to_author_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/privacy_policy"
        android:title="@string/menu_privacy_policy_text"
        app:showAsAction="never" />

</menu>