<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tvLetterA"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_a"
        app:layout_constraintBottom_toTopOf="@+id/viewPerson"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@id/viewPerson"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterB" />


    <TextView
        android:id="@+id/tvLetterB"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_b"
        app:layout_constraintBottom_toTopOf="@+id/viewPerson"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterA"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterC" />

    <TextView
        android:id="@+id/tvLetterC"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_c"
        app:layout_constraintBottom_toTopOf="@+id/viewPerson"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterB"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterD" />

    <TextView
        android:id="@+id/tvLetterD"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_d"
        app:layout_constraintBottom_toTopOf="@+id/viewPerson"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterC"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterE" />

    <TextView
        android:id="@+id/tvLetterE"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_e"
        app:layout_constraintBottom_toTopOf="@+id/viewPerson"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterD"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterF" />

    <TextView
        android:id="@+id/tvLetterF"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_f"
        app:layout_constraintBottom_toTopOf="@+id/viewPerson"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterE"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterG" />

    <TextView
        android:id="@+id/tvLetterG"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_g"
        app:layout_constraintBottom_toTopOf="@+id/viewPerson"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterF"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterH" />

    <TextView
        android:id="@+id/tvLetterH"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_h"
        app:layout_constraintBottom_toTopOf="@+id/viewPerson"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterG"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterI" />

    <TextView
        android:id="@+id/tvLetterI"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_i"
        app:layout_constraintBottom_toTopOf="@+id/viewPerson"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterH"
        app:layout_constraintRight_toLeftOf="@+id/tvLetterJ" />

    <TextView
        android:id="@+id/tvLetterJ"
        style="@style/SingleCharacterStyle"
        android:text="@string/letter_j"
        app:layout_constraintBottom_toTopOf="@+id/viewPerson"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/tvLetterI"
        app:layout_constraintRight_toRightOf="@id/viewPerson" />
</merge>