<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tvNumber1PC"
        android:text="@string/number_1"
        style="@style/SingleDigitStyle"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvNumber2PC"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/viewComputer"
        app:layout_constraintTop_toTopOf="@+id/viewComputer" />

    <TextView
        android:id="@+id/tvNumber2PC"
        style="@style/SingleDigitStyle"
        android:text="@string/number_2"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvNumber3PC"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/viewComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber1" />

    <TextView
        android:id="@+id/tvNumber3PC"
        style="@style/SingleDigitStyle"
        android:text="@string/number_3"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvNumber4PC"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/viewComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber2PC" />

    <TextView
        android:id="@+id/tvNumber4PC"
        style="@style/SingleDigitStyle"
        android:text="@string/number_4"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvNumber5PC"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/viewComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber3PC" />

    <TextView
        android:id="@+id/tvNumber5PC"
        style="@style/SingleDigitStyle"
        android:text="@string/number_5"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvNumber6PC"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/viewComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber4PC" />

    <TextView
        android:id="@+id/tvNumber6PC"
        style="@style/SingleDigitStyle"
        android:text="@string/number_6"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvNumber7PC"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/viewComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber5PC" />

    <TextView
        android:id="@+id/tvNumber7PC"
        style="@style/SingleDigitStyle"
        android:text="@string/number_7"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvNumber8PC"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/viewComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber6PC" />

    <TextView
        android:id="@+id/tvNumber8PC"
        style="@style/SingleDigitStyle"
        android:text="@string/number_8"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvNumber9PC"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/viewComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber7PC" />

    <TextView
        android:id="@+id/tvNumber9PC"
        style="@style/SingleDigitStyle"
        android:text="@string/number_9"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvNumber10PC"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/viewComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber8PC" />

    <TextView
        android:id="@+id/tvNumber10PC"
        style="@style/SingleDigitStyle"
        android:text="@string/number_10"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/viewComputer"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/viewComputer"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber9PC" />
</merge>